Fix responsive third column issue on the Pricing Table block

--- a/src/blocks/pricing-table/styles/editor.scss
+++ b/src/blocks/pricing-table/styles/editor.scss
@@ -16,6 +16,10 @@
 					flex-wrap: wrap;
 					position: relative;
 				}
+
+				.wp-block:nth-of-type(3) .wp-block-coblocks-pricing-table-item {
+					margin-top: 30px;
+				}
 			}
 		}
 	}
