Cleaning up styles

--- a/src/styles/style/_stacked.scss
+++ b/src/styles/style/_stacked.scss
@@ -6,8 +6,8 @@ div {
 			> [class*="wp-block-coblocks-"] {
 				width: 100% !important;
 
-				&.wp-block-coblocks-column:last-child{
-					margin-bottom: 0px;
+				&.wp-block-coblocks-column:last-child {
+					margin-bottom: 0;
 				}
 			}
 		}
