--- a/src/extensions/advanced-controls/styles/style.scss
+++ b/src/extensions/advanced-controls/styles/style.scss
@@ -1,12 +1,12 @@
-[class*="wp-block-"]{
-	&.mt-0{
-		> .has-margin{
-			margin-top: 0px !important;
+[class*="wp-block-"] {
+	&.mt-0 {
+		> .has-margin {
+			margin-top: 0 !important;
 		}
 	}
-	&.mb-0{
-		> .has-margin{
-			margin-bottom: 0px !important;
+	&.mb-0 {
+		> .has-margin {
+			margin-bottom: 0 !important;
 		}
 	}
 }
