--- a/src/blocks/accordion/accordion-item/styles/editor.scss
+++ b/src/blocks/accordion/accordion-item/styles/editor.scss
@@ -2,36 +2,18 @@
 	margin-bottom: 0;
 
 	.editor-block-list__block-edit {
-		margin-top: 14px !important;
 		margin-bottom: 13px !important;
+		margin-top: 14px !important;
 	}
 
 	.editor-inner-blocks {
 		margin-left: -2px;
 	}
 
-	.editor-default-block-appender__content {
-		margin-top: 14px !important;
-		margin-bottom: 13px !important;
-	}
-
-	.editor-inserter__toggle:not([aria-expanded="true"]) {
-		opacity: 1 !important;
-	}
-
-	.editor-block-list__layout .editor-block-list__block{
-		> .editor-block-list__block-edit::before, .editor-block-list__block-edit::before {
-			// outline: none !important;
-			// outline-style: none !important;
-			// outline-width: 0px !important;
-		}
-	}
-
 	&__title {
-		border-radius: $accordion-border-radius $accordion-border-radius 0 0;
 		cursor: inherit;
-		padding: 10px 15px !important;
 		margin-bottom: 0 !important;
+		padding: 10px 15px !important;
 
 		&::after {
 			display: none;
@@ -40,6 +22,10 @@
 		&:focus {
 			outline: none;
 		}
+	}
+
+	&--open &__title {
+		border-radius: $accordion-border-radius $accordion-border-radius 0 0;
 	}
 
 	&__content {
