--- a/src/styles/style/_stacked.scss
+++ b/src/styles/style/_stacked.scss
@@ -11,32 +11,32 @@ div {
 				}
 			}
 
-			//Assign gutter as margin 
-			&.has-small-gutter{
+			// Assign row gutters as margin on the frontend.
+			&.has-small-gutter {
 				> [class*="wp-block-coblocks-"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--small;
+						margin-bottom: $gutter--small * 2;
 					}
 				}
 			}
-			&.has-medium-gutter{
+			&.has-medium-gutter {
 				> [class*="wp-block-coblocks-"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--medium;
+						margin-bottom: $gutter--medium * 2;
 					}
 				}
 			}
-			&.has-large-gutter{
+			&.has-large-gutter {
 				> [class*="wp-block-coblocks-"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--large;
+						margin-bottom: $gutter--large * 2;
 					}
 				}
 			}
-			&.has-huge-gutter{
+			&.has-huge-gutter {
 				> [class*="wp-block-coblocks-"] {
 					&:not(:last-child) {
-						margin-bottom: $gutter--huge;
+						margin-bottom: $gutter--huge * 2;
 					}
 				}
 			}
