Fix responsive editor style conflicts

--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -1,4 +1,10 @@
 .wp-block-coblocks-media-card {
+	&__inner {
+		@media (max-width: #{ ($break-small) }) {
+			display: block !important;
+		}
+	}
+
 	.editor-block-list__block[data-type="coblocks/media-card"] & &__inner {
 		grid-template-areas:
 			"media-text-media media-text-content"
