--- a/src/styles/style/_margin.scss
+++ b/src/styles/style/_margin.scss
@@ -29,3 +29,13 @@ body {
 		}
 	}
 }
+
+//fix reset margin
+div{
+	> [class*="wp-block-coblocks-"] {
+		&.has-no-margin{
+			margin: 0px !important;
+		}
+	}
+
+}
