--- a/src/styles/style/_padding.scss
+++ b/src/styles/style/_padding.scss
@@ -21,3 +21,13 @@
 .has-huge-padding {
 	padding: 60px;
 }
+
+//fix reset padding
+div{
+	> [class*="wp-block-coblocks-"] {
+		&.has-no-padding{
+			padding: 0px !important;
+		}
+	}
+
+}
