--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -36,6 +36,23 @@
 		}
 	}
 
+	.wp-block-coblocks-shape-divider__alt-wrapper::after {
+		bottom: -2px;
+		content: "";
+		display: block;
+		height: 3px;
+		left: 4px;
+		opacity: 0;
+		position: absolute;
+		width: calc(100% - 8px);
+		transition: opacity 100ms cubic-bezier(0.39, 0.575, 0.565, 1);
+	}
+
+	.wp-block-coblocks-shape-divider__alt-wrapper.is-resizing::after {
+		background: #0085ba;
+		opacity: 1;
+	}
+
 	.components-resizable-box__handle {
 		z-index: 30;
 	}
