--- a/src/extensions/advanced-controls/styles/editor.scss
+++ b/src/extensions/advanced-controls/styles/editor.scss
@@ -1,5 +1,5 @@
 .editor-styles-wrapper {
-	.wp-block.editor-block-list__block[data-no-top-margin="1"]:not(:first-child) {
+	.wp-block.editor-block-list__block[data-coblocks-top-spacing="1"]:not(:first-child) {
 		margin-top: 0 !important;
 
 		// Ensure that blocks with custom margin settings using our dimensions control
@@ -15,7 +15,7 @@
 		}
 	}
 
-	.wp-block.editor-block-list__block[data-no-bottom-margin="1"]:not(:last-child) {
+	.wp-block.editor-block-list__block[data-coblocks-bottom-spacing="1"]:not(:last-child) {
 		margin-bottom: 0 !important;
 
 		// Ensure that blocks with custom margin settings using our dimensions control
@@ -38,7 +38,7 @@
 		// Hide the inserter on blocks that follow a vertically resizable block
 		// that does not have margin bottom applied.
 		&[data-type="coblocks/map"] {
-			+ .editor-block-list__block[data-no-bottom-margin="1"] {
+			+ .editor-block-list__block[data-coblocks-bottom-spacing="1"] {
 				> .editor-block-list__insertion-point {
 					display: none;
 				}
@@ -50,8 +50,8 @@
 	.wp-block {
 		&.editor-block-list__block {
 			&.is-selected {
-				&[data-no-top-margin="1"],
-				&[data-no-bottom-margin="1"] {
+				&[data-coblocks-top-spacing="1"],
+				&[data-coblocks-bottom-spacing="1"] {
 					z-index: 29;
 				}
 			}
