--- a/src/styles/style/_stacked.scss
+++ b/src/styles/style/_stacked.scss
@@ -1,13 +1,22 @@
 div {
-	@media (max-width: 600px) {
+	@media (max-width: #{ ($break-small) }) {
 		&.is-stacked-on-mobile {
 			flex-direction: column;
 
 			> [class*="wp-block-coblocks-"] {
 				width: 100% !important;
-				
+
 				&.wp-block-coblocks-column:last-child {
 					margin-bottom: 0;
+				}
+			}
+
+			// Assign row gutters as margin on the frontend.
+			&.has-no-gutter {
+				> [class*="wp-block-coblocks-"] {
+					&:not(:last-child) {
+						margin-bottom: 0;
+					}
 				}
 			}
 
@@ -19,6 +28,7 @@ div {
 					}
 				}
 			}
+
 			&.has-medium-gutter {
 				> [class*="wp-block-coblocks-"] {
 					&:not(:last-child) {
