--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -69,6 +69,17 @@
 			margin-left: -100px;
 		}
 
+		p,
+		a,
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
+			color: inherit !important;
+		}
+
 		p:last-of-type {
 			margin-bottom: 0;
 		}
