--- a/src/styles/editor/_icons.scss
+++ b/src/styles/editor/_icons.scss
@@ -11,9 +11,9 @@
 
 // Style our custom colored icons like the default icons.
 .coblocks__svg {
-
 	.components-panel &,
 	.components-toolbar &,
+	.editor-block-types-list &,
 	.editor-block-navigation__item & {
 		color: $dark-gray-500;
 	}
