Minor style tweaks

--- a/src/blocks/accordion/accordion-item/styles/style.scss
+++ b/src/blocks/accordion/accordion-item/styles/style.scss
@@ -1,5 +1,6 @@
 .wp-block-coblocks-accordion-item {
 	border-radius: $accordion-border-radius;
+	list-style: none;
 	margin: 0 0 1em;
 	word-break: break-word;
 
