Add OrientationControl to the Shape Divider

--- a/src/blocks/shape-divider/styles/style.scss
+++ b/src/blocks/shape-divider/styles/style.scss
@@ -17,7 +17,7 @@
 			transform: scaleY(-1);
 		}
 
-		&.is-horizontally-flipped {
+		&.is-horizontally-flipped svg {
 			transform: scaleX(-1) scaleY(-1);
 		}
 	}
