--- a/src/blocks/row/styles/style.scss
+++ b/src/blocks/row/styles/style.scss
@@ -31,7 +31,7 @@
 		> :not([class*="wp-block-"]) {
 			margin-left: auto;
 			margin-right: auto;
-			max-width: calc(6 * (100vw / 12));
+			max-width: 100%;
 		}
 	}
 }
