Fewer icon samples

--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -6,3 +6,12 @@
 		}
 	}
 }
+
+//Toolbar Styling
+.components-coblocks-icons-dropdown{
+	.components-icon-button{
+		svg{
+			max-width: 20px;
+		}
+	}
+}
