--- a/src/blocks/highlight/styles/style.scss
+++ b/src/blocks/highlight/styles/style.scss
@@ -1,4 +1,5 @@
 .wp-block-coblocks-highlight {
+	background: transparent !important;
 
 	&:empty {
 		display: none;
@@ -9,8 +10,8 @@
 	}
 
 	&__content {
-		position: relative;
 		padding: 2px 5px 2px 3px;
+		position: relative;
 	}
 
 	&__content:not(.has-background) {
