2019 theme specific color fixes

--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -290,18 +290,20 @@
 }
 
 //Fix background color contrast issue
-body .editor-styles-wrapper {
-	.wp-block-coblocks-media-card {
-		&__content {
-			p,
-			a,
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
-				color: inherit;
+body{
+	.editor-styles-wrapper {
+		.wp-block-coblocks-media-card {
+			&__content {
+				p,
+				a,
+				h1,
+				h2,
+				h3,
+				h4,
+				h5,
+				h6 {
+					color: inherit;
+				}
 			}
 		}
 	}
