--- a/src/blocks/media-card/styles/style.scss
+++ b/src/blocks/media-card/styles/style.scss
@@ -126,18 +126,49 @@
 }
 
 //Fix background color contrast issue
-body .entry .entry-content {
-	.wp-block-coblocks-media-card {
-		&__content {
-			p,
-			a,
-			h1,
-			h2,
-			h3,
-			h4,
-			h5,
-			h6 {
-				color: inherit;
+body{
+	.entry .entry-content {
+		.wp-block-coblocks-media-card {
+			&__content {
+				p,
+				a,
+				h1,
+				h2,
+				h3,
+				h4,
+				h5,
+				h6 {
+					color: inherit;
+				}
+			}
+		}
+	}
+	&.is-twentynineteen{
+		.entry .entry-content{
+			.wp-block-coblocks-media-card {
+				&__content {
+					p,
+					a,
+					h1,
+					h2,
+					h3,
+					h4,
+					h5,
+					h6 {
+						&.has-primary-color{
+							color: #0073aa;
+						}
+						&.has-secondary-color{
+							color: #005177;
+						}
+						&.has-dark-gray-color{
+							color: #111;
+						}
+						&.has-light-gray-color{
+							color: #767676;
+						}
+					}
+				}
 			}
 		}
 	}
