--- a/src/blocks/pricing-table/styles/editor.scss
+++ b/src/blocks/pricing-table/styles/editor.scss
@@ -17,7 +17,8 @@
 					position: relative;
 				}
 
-				.wp-block:nth-of-type(3) .wp-block-coblocks-pricing-table-item {
+				.wp-block:nth-of-type(3) .wp-block-coblocks-pricing-table-item,
+				.wp-block:nth-of-type(4) .wp-block-coblocks-pricing-table-item {
 					margin-top: 30px;
 				}
 			}
