--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -1,6 +1,6 @@
 .editor-block-list__block[data-type="coblocks/icon"] {
-	.wp-block-coblocks-icon__inner{
-		> svg{
+	.wp-block-coblocks-icon__inner {
+		> svg {
 			width: 100%;
 			height: 100%;
 		}
@@ -8,9 +8,23 @@
 }
 
 //Toolbar Styling
-.components-coblocks-icons-dropdown{
-	.components-icon-button{
-		svg{
+.components-coblocks-icons-dropdown {
+	&__inner {
+		padding: 10px;
+	}
+
+	input[type="text"].components-text-control__input {
+		display: block;
+
+		padding: 11px 16px;
+		position: relative;
+		z-index: 1;
+		border-radius: 4px;
+		font-size: 13px;
+	}
+
+	.components-icon-button {
+		svg {
 			max-width: 20px;
 		}
 	}
