--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -69,3 +69,25 @@
 		}
 	}
 }
+
+//Fixed toolbar input styling
+.edit-post-header{
+	.edit-post-header-toolbar__block-toolbar{
+		.components-toolbar{
+			input[class*="wp-block-coblocks"]{
+				&[type=text]{
+					font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+				    font-size: 13px;
+				    padding: 6px 8px;
+				    box-shadow: 0 0 0 transparent;
+				    transition: box-shadow .1s linear;
+				    border-radius: 4px;
+				    border: 1px solid #8d96a0;
+				    background-color: #fff;
+				    color: #32373c;
+				    outline: 0;
+				}
+			}
+		}
+	}
+}
