--- a/src/common.scss
+++ b/src/common.scss
@@ -30,6 +30,7 @@ $twitter: #1da1f2;
 $block-padding: 10px;
 $border-width: 1px;
 $break-small: 600px;
+$break-small-twentynineteen: 800px;
 $break-smallest: 420px;
 $grid-size-large: 11px;
 $dark-gray-500: #555d66; // Use this most of the time for dark items.
