--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -28,6 +28,7 @@
 
 	&__via {
 		margin: 3px;
+		padding-left: 26px !important;
 	}
 
 	&__via-label {
@@ -35,13 +36,18 @@
 		display: flex;
 		flex-basis: 0;
 		font-size: 12px;
-		padding-left: 6px;
-		padding-right: 4px;
+		height: 36px;
+		left: 7px;
+		position: absolute;
 		white-space: nowrap;
 
 		svg {
 			color: #555d66;
 		}
+	}
+
+	&__via-wrapper {
+		position: relative;
 	}
 
 	//Top toolbar styling for the Twitter username field
@@ -56,28 +62,23 @@
 		@media (min-width: 1080px) {
 			border-radius: 4px;
 			margin: 2px 4px;
-			padding-left: 4px;
+			padding-left: 28px !important;
 			padding-right: 4px;
 		}
 
 		&:focus {
-			color: #191e23;
 			border-color: #00a0d2;
 			box-shadow: 0 0 0 1px #00a0d2;
-			outline: 2px solid transparent;
+			color: #191e23;
 			outline-offset: -2px;
+			outline: 2px solid transparent;
 		}
 	}
 
 	.edit-post-header-toolbar__block-toolbar &__via-label {
-		align-items: center;
-		display: flex;
-		padding-left: 6px;
-		padding-right: 2px;
+		padding-left: 2px;
 
 		@media (min-width: 1080px) {
-			padding-left: 4px;
-			padding-right: 4px;
 		}
 
 		svg {
