--- a/src/blocks/click-to-tweet/styles/style.scss
+++ b/src/blocks/click-to-tweet/styles/style.scss
@@ -44,11 +44,10 @@
 		font-size: 13px;
 		font-style: normal;
 		font-weight: 400;
-		height: 34px;
-		line-height: 34px;
+		line-height: 1.8;
 		margin-left: 40px;
 		margin-top: 10px;
-		padding: 0 1em;
+		padding: 0.28em 1em;
 		position: relative;
 		text-decoration: none !important;
 		white-space: normal;
@@ -75,7 +74,6 @@
 	}
 
 	@keyframes pulse {
-
 		0% {
 			transform: scale(1);
 		}
