--- a/src/common.scss
+++ b/src/common.scss
@@ -26,11 +26,15 @@ $accordion-background: #f2f2f2;
 // Social.
 $twitter: #1da1f2;
 
+// Breakpoints.
+$break-small-twentynineteen: 1024px;
+$break-small-twentynineteen--min: 768px;
+$break-small-mediacard: 660px;
+
 // Variables from core.
 $block-padding: 10px;
 $border-width: 1px;
 $break-small: 600px;
-$break-small-twentynineteen: 800px;
 $break-smallest: 420px;
 $grid-size-large: 11px;
 $dark-gray-500: #555d66; // Use this most of the time for dark items.
@@ -43,6 +47,12 @@ $dark-gray-500: #555d66; // Use this most of the time for dark items.
 
 @mixin break-smallest() {
 	@media (min-width: #{ ($break-smallest) }) {
+		@content;
+	}
+}
+
+@mixin break-small-mediacard() {
+	@media (min-width: #{ ($break-small-mediacard) }) {
 		@content;
 	}
 }
