Block border shows up if toolbar is not fixed

--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -1,5 +1,5 @@
 .editor-block-list__block[data-type="coblocks/shape-divider"] {
-	.editor-block-list__block-edit::before {
+	.has-fixed-toolbar & .editor-block-list__block-edit::before {
 		display: none;
 	}
 
