--- a/src/blocks/icon/styles/style.scss
+++ b/src/blocks/icon/styles/style.scss
@@ -1,6 +1,7 @@
-.wp-block-coblocks-icon{
-	svg{
-		width: 100%;
+.wp-block-coblocks-icon {
+	svg {
+		fill: currentColor;
 		height: 100%;
+		width: 100%;
 	}
 }
