Support Icon Block alignment

--- a/src/blocks/icon/styles/style.scss
+++ b/src/blocks/icon/styles/style.scss
@@ -1,4 +1,7 @@
 .wp-block-coblocks-icon {
+	.wp-block-coblocks-icon__inner{
+		display: inline-block;
+	}
 	svg {
 		fill: currentColor;
 		height: 100%;
