--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -1,7 +1,7 @@
 .editor-block-list__block[data-type="coblocks/icon"] {
 	.wp-block-coblocks-icon__inner {
 		align-items: center;
-		display: flex;
+		display: inline-block;
 		justify-content: center;
 
 		> svg {
