--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -15,6 +15,7 @@
 .coblocks-icon-types-list {
 	max-height: 270px;
 	overflow-y: scroll;
+
 	.editor-block-types-list__list-item {
 		.components-button {
 			background: transparent;
@@ -29,7 +30,9 @@
 				box-shadow: none;
 				outline: none;
 			}
+
 			svg {
+				fill: #191e23;
 				margin: 0;
 				padding: 0;
 			}
@@ -57,11 +60,13 @@
 		display: flex;
 		height: 100% !important;
 		justify-content: center;
+		transform: scale(1.23);
 		width: 100% !important;
 
 		> svg {
-			height: 70%;
-			width: 70%;
+			fill: #191e23;
+			height: 24px;
+			width: 24px;
 		}
 	}
 }
